--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,11 @@ body {
     padding: 0 5%;
 }
 
+.store-body {
+    display: flex;
+    justify-content: center;
+}
+
 h1, h2, h3 {
     margin: 0;
 }
@@ -81,6 +86,7 @@ h1, h2, h3 {
     border: none;
     border-radius: 7px;
     width: 100%;
+    height: 40px;
     transition: 300ms;
     font-family: inherit;
 }
@@ -119,5 +125,60 @@ h1, h2, h3 {
 
 .image-login {
     width: 60%;
+}
+
+.small-logo > .logo-title {
+    font-size: 51px;
+    line-height: 50px;
+}
+
+.small-logo > .logo-subtitle {
+    font-size: 11px;
+}
+
+.welcome-message {
+    color: #BFBFBF;
+    font-size: 20px;
+}
+
+.fit-content-button {
+    width: fit-content;
+}
+
+.padding-x-medium {
+    padding: 0 50px;
+}
+.padding-x-small {
+    padding: 0 33px;
+}
+
+.red-button {
+    background-color: #EE4C4C;
+    border: 1px solid #EE4C4C;
+}
+
+.red-button:hover {
+    border: 1px solid #EE4C4C;
+    color: #EE4C4C;
+}
+
+.header-store {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    height: 100px;
+    max-width: 1320px;
+}
+
+.logo-welcome-wrapping {
+    display: flex;
+    align-items: center;
+    gap: 45px;
+}
+
+.registerProd-logout-wrapping {
+    display: flex;
+    gap: 15px;
 }
 
